--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
-    "incremental": true,
+    "importHelpers": false,
     "jsx": "react",
     "lib": ["esnext", "dom"],
     "module": "esnext",
@@ -15,9 +14,10 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "strict": true,
-    "target": "es2017"
+    "target": "esnext",
+    "outDir": "dist"
   },
   "exclude": ["node_modules", "dist"],
   "include": ["src"]
