--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.495.0",
+    "node-fetch": "^2.6.0",
     "sharp": "^0.22.1",
     "tslib": "^1.10.0"
   }
