--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "target": "esnext",
     "outDir": "dist"
   },
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "src/*.test.ts"],
   "include": ["src"]
 }
