--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "importHelpers": false,
     "jsx": "react",
     "lib": ["esnext", "webworker"],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noEmitHelpers": true,
     "noFallthroughCasesInSwitch": true,
